# lang_cards_backend

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.local.yaml  pyproject.toml
.github/workflows/: basic-workflow.yml  ruff-action.yml  run-tests.yml
src/: broker.py  config.py  database.py  exceptions.py  logger.py  main.py  models.py  router.py  schemas.py  service.py
src/core/: llm.py  prompts.py  schemas.py
src/decks/: models.py  router.py  schemas.py  service.py  tasks.py  test_deck.py
src/flashcards/: image_storage.py  models.py  router.py  schemas.py  service.py
src/users/: models.py  service.py
tests/: conftest.py  mocks.py  test_deck.py  test_flashcard.py  test_router.py
