[project]
name = "lang_cards_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "google-genai>=1.28.0",
    "mirascope[google]>=1.25.4",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "supabase>=2.18.0",
    "taskiq-redis>=1.2.1",
    "taskiq[redis]>=0.12.1",
    "tenacity>=8.5.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."
